# aoc_2022

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  read_file.hpp
day1/: README.md  benchmark.sh  day1.cpp  main.cpp
day2/: day2.cpp  main.cpp
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp
day6/: day6.cpp  input.txt
day7/: day7.cpp  input2.txt
day_1/: README.md  main.cpp
day_1/scripts/: benchmark.sh
scripts/: build_alt.sh  run.sh
template/: input.txt  template.cpp
